versioned_docs/version-2.11/reference/subsystems/terraform-hcl2-parser.mdx
---
title: terraform-hcl2-parser
description: |
  Used to parse Terraform modules to infer their dependencies.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Used to parse Terraform modules to infer their dependencies.

Backend: <span className="color--primary">`pants.backend.experimental.terraform`</span>

Config section: <span className="color--primary">`[terraform-hcl2-parser]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--terraform-hcl2-parser-version=<str>`}
  env_repr='PANTS_TERRAFORM_HCL2_PARSER_VERSION'
  toml_repr={`[terraform-hcl2-parser]
version = <str>`}
  default_repr={`python-hcl2==3.0.3`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--terraform-hcl2-parser-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_TERRAFORM_HCL2_PARSER_EXTRA_REQUIREMENTS'
  toml_repr={`[terraform-hcl2-parser]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--terraform-hcl2-parser-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_TERRAFORM_HCL2_PARSER_INTERPRETER_CONSTRAINTS'
  toml_repr={`[terraform-hcl2-parser]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--terraform-hcl2-parser-lockfile=<str>`}
  env_repr='PANTS_TERRAFORM_HCL2_PARSER_LOCKFILE'
  toml_repr={`[terraform-hcl2-parser]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.11.1/src/python/pants/backend/terraform/hcl2.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants generate-lockfiles --resolve=terraform-hcl2-parser`.

As explained at https://www.pantsbuild.org/v2.11/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
